# vswarm

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  LICENSE  README.md  package.xml  requirements.txt  setup.py  vswarm.rosinstall
cfg/: FlockingNode.cfg  MigrationNode.cfg  MultiTargetTrackingNode.cfg  ObjectDetectionNode.cfg  RelativeLocalizationNode.cfg
config/chrony/: README.md  chrony_client.conf  chrony_default.conf  chrony_server.conf
config/mavros/: px4_config.yaml
config/multimaster/: drone.yaml  gcs.yaml
config/object_detection_node/: config.yaml  single.yaml
config/px4/: rcS_dronedome  (+3 more)
docs/: dataset.md  installation.md  installation_jetson.md
launch/: camera.launch  cameras.launch  dronedome.launch  dronedome_multimaster.launch  flocking_node.launch  gazebo_mocap.launch  gazebo_mocap_node.launch  global_position_node.launch  mavros.launch  migration_node.launch  multi_drone.launch  multi_target_tracking_node.launch  multimaster_drone.launch  multimaster_gcs.launch  object_detection_node.launch  relative_localization_node.launch  single_drone.launch  status_node.launch  tf_camera.launch  tf_cameras.launch  visualization_node.launch  vrpn_client.launch  vswarm_gazebo.launch
script/: add_labels_to_rosbag.py  background_subtraction.py  calibration_check.py  convert_labelme_to_mscoco.py  convert_mscoco_to_labelme.py  deploy_jetson.sh  detection_to_labelme.py  run_tmux.sh  test_subscriber_lag.py  wifi_reconnect.sh  yaml_to_px4_params.py
src/: flocking_node.py  gazebo_mocap_node.cpp  gazebo_mocap_node.py  global_position_node.py  metric_node.py  migration_node.py  multi_target_tracking_node.py  object_detection_node.py  relative_localization_node.py  status_node.py  swarm_control.py  visualization_node.py
util/: lequad.service  lequad.zsh  localrc_common.sh  rosbag_filter_offboard.py  rosbag_reorder.py  rosbag_to_image.py  run_tmux.sh  setup.zsh  wait_for_gcs.zsh  wait_for_interface.zsh  wait_for_ip.zsh  wait_for_node.zsh  wait_for_ros.zsh  zsh_history_fix.zsh
worlds/: outdoor.world  outdoor_mission.world  white.world
(+82 files in other folders)
